petit fix final pour l'overflow

--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	padding-left: 0;
+	justify-content: center;
 }
 
 .quizz {
